--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "path": "^0.12.7",
+    "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
+    "pg-hstore": "^2.3.4",
     "playwright": "^1.53.1",
     "proxy-chain": "^2.5.9",
     "sequelize": "^6.37.7",
